--- a/scripts/components/road/tpls/attr_rdcrf_tpl/crfObjectNameTpl.html
+++ b/scripts/components/road/tpls/attr_rdcrf_tpl/crfObjectNameTpl.html
@@ -2,83 +2,93 @@
 * Created by liuyang on 2016/8/24.
 */
 <div ng-controller="crfObjectNameCtrl" id="namesOfLinkDiv" style="height: 100%;">
-    <form name="nameDetailForm" style="height: 100%;">
-        <ul  class="list-group list-group-lg m-b-none" style="margin-bottom: 5px;height: 100%;">
-            <li class="list-group-item">
-                <div><label class="control-label">名称组号</label></div>
-                <div class="inline"><input type="text" ng-model="oridiData.nameGroupid" disabled/></div>
-            </li>
-            <li class="list-group-item">
-                <div><label class="control-label">代码语言</label></div>
-                <div class="inline">
-                    <select  ng-model="oridiData.langCode"
-                             ng-options="value.id as value.label for value in routeAttOptions">
-                    </select>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div><label class="control-label">名称内容</label></div>
-                <div class="inline">
-                    <input type="text" ng-model="oridiData.name" style="width: 150px" ng-change="changePinyin(oridiData.name)"/>
-                    <span  class="glyphicon glyphicon-search" title="查找推荐名称"
-                           ng-click="searchGroupidByNames($index)">
-                </span>
-                </div>
-            </li>
-            <li class="list-group-item" id="name" style="display: none;width: 95%;">
-                <div class="pic-show" style="right: 29px;width: 200px;">
-                    <div class="option-hide">
-                        <span aria-hidden="true" class="glyphicon glyphicon-remove-sign" ng-click="hidePicSelect($event)"></span>
-                    </div>
-                    <div class="pic-show-well">
-                        <div class="img-well" ng-repeat="nitem in objNames"
-                             ng-click="selectNamesId($index)">
-                            <div class="img-describe">
-                                {{nitem}}&nbsp;&nbsp;
+    <div class="fm-component" >
+        <div class="add-icon" ng-click="addNameInfo();">
+            <i class="glyphicon glyphicon-plus-sign"></i>
+        </div>
+        <div class="content" ng-repeat="info in crfObjectNames track by $index">
+            <form>
+                <ul class="fm-ul fm-ul-form">
+                    <li>
+                        <label>名称组</label>
+                        <div >
+                            <input type="text" readonly class="fm-control chosen-disabled" ng-model="info.nameGroupid"/>
+                        </div>
+                    </li>
+                    <li>
+                        <label>名称组号</label>
+                        <div >
+                            <input type="text" readonly class="fm-control chosen-disabled" ng-model="info.nameId"/>
+                        </div>
+                    </li>
+                    <li style="display: none;width: 95%;">
+                        <div class="pic-show" style="right: 29px;width: 200px;">
+                            <div class="option-hide">
+                                <span aria-hidden="true" class="glyphicon glyphicon-remove-sign" ng-click="hidePicSelect($event)"></span>
+                            </div>
+                            <div class="pic-show-well">
+                                <div class="img-well" ng-repeat="nitem in objNames"
+                                     ng-click="selectNamesId($index)">
+                                    <div class="img-describe">
+                                        {{nitem}}&nbsp;&nbsp;
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <!--<div class="clearfix"></div>-->
-                    <!--<div class="pull-left num-well">-->
-                        <!--第 <span class="pic-num" ng-bind="picNowNum+1">1</span> 页-->
-                        <!--|-->
-                        <!--共 <span class="pic-total" ng-bind="picTotal">1</span>-->
-                        <!--页<br>-->
-                        <!--&lt;!&ndash;每页条数<input style="width:40px;" type="text" id="pagesize"&ndash;&gt;-->
-                        <!--&lt;!&ndash;value="5">&ndash;&gt;-->
-                    <!--</div>-->
-                    <!--<div class="pic-show-btn pull-right">-->
-                        <!--<div class="pull-right btn-group">-->
-                            <!--<a  style="color: #fff;" class="btn  btn-xs pic-pre"-->
-                                <!--ng-click="picPre()" disabled>-->
-                                <!--<i class="glyphicon glyphicon-menu-left"></i>-->
-                            <!--</a>-->
-                            <!--<a style="color: #fff;" class="btn btn-xs pic-next"-->
-                               <!--ng-click="picNext()">-->
-                                <!--<i class="glyphicon glyphicon-menu-right"></i>-->
-                            <!--</a>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                </div>
-            </li>
+                    </li>
+                    <li>
+                        <label>代码语言</label>
+                        <div>
+                            <select ng-model="info.langCode" class="fm-control" ng-click="langCodeChange(info.langCode);">
+                                <option value="{{value.id}}" ng-repeat="value in langCodeOptions" ng-selected="info.langCode == value.id" ng-disabled="selectedLangcodeArr.indexOf(value.id) > -1"> {{value.label}}</option>
+                            </select>
+                        </div>
+                    </li>
 
-            <li class="list-group-item">
-                <div><label class="control-label">名称发音</label></div>
-                <div class="inline"><input type="text" ng-model="oridiData.phoneTic"/></div>
-            </li>
-            <li class="list-group-item">
-                <div><label class="control-label" >名称来源</label></div>
-                <div class="radio inline" style="text-align: left">
-                    <label>
-                        <input type="radio" name="originOfName" value=0 ng-model="oridiData.srcFlag">
-                        未定义
-                    </label>
-                    <label>
-                        <input type="radio" name="originOfName" value=1 ng-model="oridiData.srcFlag">
-                        翻译
-                    </label>
-                </div>
-            </li>
-        </ul>
-    </form>
+                    <li>
+                        <label class="control-label">名称内容</label>
+                        <div class="inline">
+                            <input type="text" ng-model="info.name" style="width: 150px" ng-blur="changePinyin($index, info.name)"/>
+                            <span  class="glyphicon glyphicon-search" title="查找推荐名称" ng-click="searchGroupidByNames($index)">
+                            </span>
+                        </div>
+                    </li>
+                    <li id="name" style="display: none;">
+                        <div class="pic-show" style="right: 29px;width: 200px;">
+                            <div class="option-hide">
+                                <span aria-hidden="true" class="glyphicon glyphicon-remove-sign" ng-click="hidePicSelect($event)"></span>
+                            </div>
+                            <div class="pic-show-well">
+                                <div class="img-well" ng-repeat="nitem in objNames"
+                                     ng-click="selectNamesId($index,nitem)">
+                                    <div class="img-describe">
+                                        {{nitem}}&nbsp;&nbsp;
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <label>名称发音</label>
+                        <div>
+                            <input type="text" class="fm-control" ng-model="info.phonetic"/>
+                        </div>
+                    </li>
+                    <li>
+                        <label>名称来源</label>
+                        <div>
+                            <label>
+                                <input type="radio" name="originOfName" value=0 ng-model="info.srcFlag">
+                                未定义
+                            </label>
+                            <label>
+                                <input type="radio" name="originOfName" value=1 ng-model="info.srcFlag">
+                                翻译
+                            </label>
+                        </div>
+                    </li>
+                </ul>
+            </form>
+        </div>
+    </div>
 </div>
