--- a/scripts/components/road/tpls/attr_mileagepile_tpl/mileagePile.html
+++ b/scripts/components/road/tpls/attr_mileagepile_tpl/mileagePile.html
@@ -9,37 +9,37 @@
                 <div class="content">
                     <ul class="fm-ul fm-ul-form">
                         <li>
-                            <label>关联道路</label>
+                            <label>关联道路:</label>
                             <div><input placeholder="关联道路" type="text" class="chosen-disabled" class="fm-control chosen-disabled" ng-model="mileagepile.linkPid" /></div>
                         </li>
                         <li>
-                            <label>里程桩编号</label>
+                            <label>里程桩编号:</label>
                             <div><input placeholder="里程桩编号" type="text" class="fm-control" ng-model="mileagepile.mileageNum" /></div>
                         </li>
                         <li>
-                            <label>道路名称</label>
+                            <label>道路名称:</label>
                             <div><input placeholder="道路名称" type="text" class="fm-control" ng-model="mileagepile.roadName" /></div>
                         </li>
                         <li>
-                            <label>路线编号</label>
+                            <label>路线编号:</label>
                             <div><input placeholder="路线编号" type="text" class="fm-control" ng-model="mileagepile.roadNum" /></div>
                         </li>
 
                         <li>
-                            <label>里程桩方向</label>
+                            <label>里程桩方向:</label>
                             <div>
                                 <select ng-model="mileagepile.direct" ng-options="value.id as value.label for value in direct"></select>
                             </div>
                         </li>
 
                         <li>
-                            <label>编号类型</label>
+                            <label>编号类型:</label>
                             <div>
                                 <select ng-model="mileagepile.roadType" ng-options="value.id as value.label for value in roadType"></select>
                             </div>
                         </li>
                         <li>
-                            <label>来源</label>
+                            <label>来　　　源:</label>
                             <div>
                                 <select ng-model="mileagepile.source" ng-options="value.id as value.label for value in source"></select>
                             </div>
