行政区划代表点名称信息修改

--- a/scripts/components/road/tpls/attr_adminstratives_tpl/adAdminNameTpl.html
+++ b/scripts/components/road/tpls/attr_adminstratives_tpl/adAdminNameTpl.html
@@ -15,7 +15,7 @@
                     <li>
                         <label>名称组号</label>
                         <div >
-                            <input type="text" readonly class="fm-control chosen-disabled" ng-model="info.nameId"/>
+                            <input type="text" readonly class="fm-control chosen-disabled" ng-model="info.pid"/>
                         </div>
                     </li>
                     <li>
