屏蔽行政区划代表点里原始的名称信息显示

--- a/scripts/components/road/tpls/attr_adminstratives_tpl/adAdminTpl.html
+++ b/scripts/components/road/tpls/attr_adminstratives_tpl/adAdminTpl.html
@@ -74,7 +74,7 @@
                             </div>
                         </li>
                     </ul>
-                    <ul class="fm-ul fm-ul-form">
+                    <!--<ul class="fm-ul fm-ul-form">
                         <li>
                             <div>
                                 <a ng-click="otherAdminName()" style="cursor: pointer;color:#FFF;">行政区划名称</a>
@@ -85,7 +85,7 @@
                                     ng-repeat="item in adAdminData.names">{{item.name}}</label>
                             </div>
                         </li>
-                    </ul>
+                    </ul>-->
                 </div>
             </div>
         </form>
