--- a/scripts/components/road/tpls/attr_link_tpl/rticOfIntTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/rticOfIntTpl.html
@@ -4,7 +4,7 @@
     <ul class="list-group list-group-lg m-b-none">
         <li class="list-group-item">
             <div><label class="control-label">RTIC代码</label></div>
-            <div class="inline"><input style="width:148px;" type="text" ng-model="oridiData.code"/>
+            <div class="inline"><input style="width:148px;" type="number" ng-model="oridiData.code"/>
                     <span ng-click="addRticCode()" class="glyphicon glyphicon-plus" style="cursor: pointer;margin-left: 3px;color:#FFF;"></span>
             </div>
         </li>
