--- a/scripts/components/road/tpls/attr_zone_tpl/zoneLinkTpl.html
+++ b/scripts/components/road/tpls/attr_zone_tpl/zoneLinkTpl.html
@@ -12,7 +12,7 @@
                             <label>种别</label>
                             <div>
                                 <select ng-model="zoneLinkData.kinds[0].kind"
-                                        ng-options="value.id as value.label for value in kind">
+                                        ng-options="value.id as value.label for value in kindOpt">
                                 </select>
                             </div>
                         </li>
