--- a/scripts/libs/angular-tree-control/tree-control.css
+++ b/scripts/libs/angular-tree-control/tree-control.css
@@ -47,17 +47,17 @@ treecontrol li .tree-unselectable {
 
 treecontrol.tree-classic li.tree-expanded i.tree-branch-head {
     padding: 1px 10px;
-    background: url("../../road/img/folder.png") no-repeat;
+    background: url("../../../images/road/img/folder.png") no-repeat;
 }
 
 treecontrol.tree-classic li.tree-collapsed i.tree-branch-head {
     padding: 1px 10px;
-    background: url("../../road/img/folder-closed.png") no-repeat;
+    background: url("../../../images/road/img/folder-closed.png") no-repeat;
 }
 
 treecontrol.tree-classic li.tree-leaf i.tree-leaf-head {
     padding: 1px 10px;
-    background: url("../../road/img/images/file.png") no-repeat;
+    background: url("../../../images/road/img/file.png") no-repeat;
 }
 
 treecontrol.tree-classic li .tree-selected {
@@ -71,12 +71,12 @@ treecontrol.tree-classic li .tree-unselectable {
 
 treecontrol.tree-light li.tree-expanded i.tree-branch-head {
     padding: 1px 10px;
-    background: url("../../road/img/images/node-opened-2.png") no-repeat;
+    background: url("../../../images/road/img/node-opened-2.png") no-repeat;
 }
 
 treecontrol.tree-light li.tree-collapsed i.tree-branch-head {
     padding: 1px 10px;
-    background: url("../../road/img/images/node-closed-2.png") no-repeat;
+    background: url("../../../images/road/img/node-closed-2.png") no-repeat;
 }
 
 treecontrol.tree-light li.tree-leaf i.tree-leaf-head {
@@ -95,12 +95,12 @@ treecontrol.tree-light li .tree-unselectable {
 
 treecontrol.tree-dark li.tree-expanded i.tree-branch-head {
     padding: 1px 10px;
-    background: url("../../road/img/images/node-opened-light.png") no-repeat;
+    background: url("../../../images/road/img/node-opened-light.png") no-repeat;
 }
 
 treecontrol.tree-dark li.tree-collapsed i.tree-branch-head {
     padding: 1px 10px;
-    background: url("../../road/img/images/node-closed-light.png") no-repeat;
+    background: url("../../../images/road/img/node-closed-light.png") no-repeat;
 }
 
 treecontrol.tree-dark li.tree-leaf i.tree-leaf-head {
@@ -146,17 +146,17 @@ treecontrol.tree-boot i.tree-leaf-head {
 
 treecontrol.tree-boot li.tree-expanded i.tree-branch-head {
     padding: 1px 10px;
-    background: url("../../road/img/images/folder.png") no-repeat;
+    background: url("../../../images/road/img/folder.png") no-repeat;
 }
 
 treecontrol.tree-boot li.tree-collapsed i.tree-branch-head {
     padding: 1px 10px;
-    background: url("../../road/img/images/folder-closed.png") no-repeat;
+    background: url("../../../images/road/img/folder-closed.png") no-repeat;
 }
 
 treecontrol.tree-boot li.tree-leaf i.tree-leaf-head {
     padding: 1px 10px;
-    background: url("../../road/img/images/file.png") no-repeat;
+    background: url("../../../images/road/img/file.png") no-repeat;
 }
 
 treecontrol.tree-boot .tree-label.tree-selected,
