查询TMCPoint详细信息

--- a/scripts/components/road/tpls/attr_link_tpl/rticTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/rticTpl.html
@@ -67,7 +67,7 @@
         </div>
         <div class="fm-panel" >
             <treecontrol class="tree-dark" tree-model="tmcTreeData" on-selection="showTreeSelected(node)">
-                {{node.name}} ({{node.tmcId}})
+                {{node.name}}
             </treecontrol>
         </div>
     </div>
