--- a/less/editor-road.less
+++ b/less/editor-road.less
@@ -60,9 +60,15 @@
 }
 
 #dataTipsOriginImg {
-    width: 100%;
+    height: 100%;
     display: block;
+    position: absolute;
     transition: all .3s;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
 
 #loadText {
