--- a/styles/imeep/editor-road.css
+++ b/styles/imeep/editor-road.css
@@ -34,9 +34,15 @@
   height: 300px;
 }
 #dataTipsOriginImg {
-  width: 100%;
+  height: 100%;
   display: block;
+  position: absolute;
   transition: all .3s;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
 }
 #loadText {
   width: 50%;
