修改树形样式和查看TMCLINE信息

--- a/scripts/components/road/tpls/attr_link_tpl/tmcPointTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/tmcPointTpl.html
@@ -33,7 +33,7 @@
                     <label style="width:35%;">类型代码</label>
                     <div >
                         <select ng-model="tmcPointData.typeCode" class="fm-control chosen-disabled"
-                                ng-options="value.id as value.label for value in typeCodeOptions" readonly>
+                                ng-options="value.id as value.label for value in typeCodeOptions" disabled>
                         </select>
                     </div>
                 </li>
@@ -74,7 +74,7 @@
                     </div>
                 </li>
                 <li>
-                    <label style="width:35%;">正方形偏移量</label>
+                    <label style="width:35%;">正方向偏移量</label>
                     <div >
                         <input type="text" readonly class="fm-control chosen-disabled" ng-model="tmcPointData.locoffPos"/>
                     </div>
