--- a/scripts/components/road/tpls/attr_link_tpl/rticTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/rticTpl.html
@@ -67,6 +67,7 @@
         </div>
         <div class="fm-panel" >
             <treecontrol class="tree-dark" tree-model="tmcTreeData" on-selection="showTreeSelected(node)">
+                <span ng-if="node.type == 'TMCPOINT' || node.type == 'TMCLINE'" ng-class="{'glyphicon':true,'glyphicon glyphicon-map-marker':node.type == 'TMCPOINT','glyphicon-road':node.type == 'TMCLINE'}"></span>
                 {{node.name}}
             </treecontrol>
         </div>
