修改树形样式

--- a/scripts/libs/angular-tree-control/tree-control.css
+++ b/scripts/libs/angular-tree-control/tree-control.css
@@ -111,6 +111,8 @@ treecontrol.tree-dark li.tree-leaf i.tree-leaf-head {
 
 treecontrol.tree-dark li .tree-selected {
     font-weight: bold;
+    background-color: #313131;
+    padding: 2px;
 }
 
 treecontrol.tree-dark li .tree-unselectable {
