TMCPoint和TMCLine名称信息

--- a/less/editor.less
+++ b/less/editor.less
@@ -2815,3 +2815,12 @@ input[type="range"]::-webkit-slider-thumb {
 .name-title{
   padding-left: 5px;
 }
+.name-title-panel{
+  color: #fff;
+  font-size: 12px !important;
+  font-weight: bolder;
+  padding: 5px;
+  width: 100%;
+  background-color: #555555;
+  border-bottom: 1px solid #fff;
+}
