--- a/scripts/components/road/tpls/attr_link_tpl/tmcPointTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/tmcPointTpl.html
@@ -3,7 +3,7 @@
         <div class="content">
             <ul class="fm-ul fm-ul-form">
                 <li style="border-bottom: 1px solid #fff;">
-                    <label style="font-weight: bolder;font-size:13px;width:50%;">TMC点属性</label>
+                    <label style="font-weight: bolder;font-size:12px;width:50%;">TMC点属性</label>
                 </li>
                 <li style="padding-top: 5px;">
                     <label style="width:35%;">TMC点号码</label>
@@ -158,6 +158,42 @@
                             <input type="radio" name="editFlag" class="chosen-disabled" value=1 ng-model="tmcPointData.editFlag" ng-disabled="tmcPointData.editFlag != 1">
                             可编辑
                         </label>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="content">
+            <div class="name-title-panel">
+                TMC点译名 （共 {{tmcPointData.names.length}} 条）
+            </div>
+            <ul class="fm-ul fm-ul-form" ng-repeat="info in tmcPointData.names track by $index" style="border-bottom: 1px solid #fff;">
+                <li style="padding-top: 10px;">
+                    <label style="width:35%;">语言代码</label>
+                    <div >
+                        <select ng-model="info.transLang" class="fm-control chosen-disabled"
+                                ng-options="value.id as value.label for value in langCodeOptions" disabled>
+                        </select>
+                    </div>
+                </li>
+                <li>
+                    <label style="width:35%;">名称内容</label>
+                    <div>
+                        <input type="text" class="fm-control chosen-disabled" ng-model="info.translateName" disabled/>
+                    </div>
+                </li>
+                <li>
+                    <label style="width:35%;">名称发音</label>
+                    <div>
+                        <input type="text" class="fm-control chosen-disabled" ng-model="info.phonetic" disabled/>
+                    </div>
+                </li>
+                <li style="padding-bottom: 10px;">
+                    <label style="width:35%;">名称标志</label>
+                    <div >
+                        <select ng-model="info.nameFlag" class="fm-control chosen-disabled"
+                                ng-options="value.id as value.label for value in nameFlagOptions" disabled>
+                        </select>
                     </div>
                 </li>
             </ul>
