--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -136,6 +136,7 @@
                         <button class="fm-top-btn blank" title="制作车道连通" ng-controller="addRdRelationCtrl" ng-click="addShape('RDLANETOPO')">连</button>
                         <button class="fm-top-btn blank" title="制作语音引导" ng-controller="addRdRelationCtrl" ng-click="addShape('RDVOICEGUIDE')">语</button>
                         <button class="fm-top-btn blank" title="制作限高限重" ng-controller="addRdRelationCtrl" ng-click="addShape('RDHGWGLIMIT')">重</button>
+                        <button class="fm-top-btn blank" title="制作卡车交限" ng-controller="addRdRelationCtrl" ng-click="addShape('RDRESTRICTIONTRUCK')">卡</button>
                         <button class="fm-top-btn blank" title="制作里程桩" ng-controller="addRdRelationCtrl" ng-click="addShape('RDMILEAGEPILE')">里</button>
                     </div>
                 </div>
