--- a/scripts/components/road/tpls/attr_restrict_tpl/rdRestrictOfTruckTpl.html
+++ b/scripts/components/road/tpls/attr_restrict_tpl/rdRestrictOfTruckTpl.html
@@ -1,205 +1,172 @@
-<div ng-controller="normalController" class="fm-component" >
+<div ng-controller="restrictionTruckController" class="fm-component" >
     <div class="title">
         卡车交限
         <span class="label label-info">{{rdRestrictCurrentData.pid}}</span>
     </div>
-
-    <div class="panel-body">
-        <form class="form-horizontal" method="get">
-            <div class="form-group">
-                <label class="col-sm-2 control-label">入</label>
-
-                <div class="col-sm-10">
-                    <input type="text" class="form-control rounded" placeholder="link编号" ng-model="data.inLinkPid">
-                </div>
-            </div>
-            <div class="line line-dashed b-b line-lg pull-in"></div>
-            <div class="form-group">
-                <div class="col-sm-2" ng-repeat="item in data.info">
-                    <img src="../../css/limit/{{item.flag}}.png" ng-click="showTips('item.flag')">
-                </div>
-                    <span style="float:right;font-size: 20px" class="glyphicon glyphicon-plus" data-toggle="modal"
-                          data-target="#myModal"></span>
-            </div>
-            <div class="line line-dashed b-b line-lg pull-in"></div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">出</label>
-
-                <div class="col-sm-10">
-                    <input type="text" class="form-control rounded" placeholder="link编号" ng-model="data.outLinkPid">
-                </div>
-            </div>
-            <div class="line line-dashed b-b line-lg pull-in"></div>
-            <div class="form-group">
-                <div class="col-sm-12">
-                    <div class="radio">
-                        <label>
-                            <input type="radio" name="crossingOrLine" value="1" ng-model="data.relationShip">
-                            路口
-                        </label>
-                        <label>
-                            <input type="radio" name="crossingOrLine" value="2" ng-model="data.relationShip">
-                            线线
-                        </label>
-                    </div>
-                </div>
-            </div>
-            <div class="line line-dashed b-b line-lg pull-in"></div>
-            <div class="form-group">
-                <label class="col-sm-3 control-label">限制类型</label>
-
-                <div class="col-sm-9">
-                    <div class="radio">
-                        <label>
-                            <input type="radio" name="researchOrLimited" value="0"
-                                   ng-model="data.type">
-                            未调查
-                        </label>
-                        <label>
-                            <input type="radio" name="researchOrLimited" value="1"
-                                   ng-model="data.type">
-                            禁止驶入
-                        </label><label>
-                        <input type="radio" name="researchOrLimited" value="2"
-                               ng-model="data.type">
-                        时间段禁止
-                    </label>
-                    </div>
-                </div>
-            </div>
-            <div class="line line-dashed b-b line-lg pull-in"></div>
-            <div class="form-group">
-                <div class="col-sm-12">
-                    <div class="radio">
-                        <label>
-                            <input type="radio" name="resOrOut" value="0" ng-model="data.resOut">
-                            限本埠
-                        </label>
-                        <label>
-                            <input type="radio" name="resOrOut" value="1" ng-model="data.resOut">
-                            限外埠
-                        </label>
-                        <label>
-                            <input type="radio" name="resOrOut" value="2" ng-model="data.resOut">
-                            不应用
-                        </label>
-                    </div>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading font-bold">
-                    卡车限制
-                </div>
-                <div class="panel-body">
-                    <form class="form-horizontal" method="get">
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">拖挂车</label>
-
-                            <div class="col-sm-9">
-                                <label class="i-switch i-switch-md bg-info m-t-xs m-r">
-                                    <input type="checkbox" ng-model="data.resTrailer"
-                                           ng-click="checkTrailer(data.resTrailer)">
-                                    <i></i>
+    <div class="content scroll-styled dark" style="height:90%;" >
+        <form name="restrictionTruckForm">
+            <div class="fm-panel">
+                <div class="content">
+                    <ul class="fm-ul fm-ul-form">
+                        <li>
+                            <div ng-repeat="item in rdRestrictCurrentData.details" class="inline" style="width: auto;min-width: 20px;">
+                                <span style=" float: right;font-size: 12px;top: 5px;margin-top: -10px;color: #fff;cursor: pointer;" class="glyphicon glyphicon-remove-sign" ng-click="deleteDirect(item,$event,$index)"></span>
+                                <img title="点击修改退出线" ng-if="item.flag===1"
+                                     ng-src="../../../images/road/1302/1302_1_{{item.restricInfo}}.svg"
+                                     class="show-tips" data-index="{{$index}}" ng-class="{'active':$index==0}"
+                                     ng-mousedown="showData(item,$event,$index)">
+                                <img title="点击修改退出线" ng-if="item.flag===2||item.flag===0"
+                                     ng-src="../../../images/road/1302/1302_2_{{item.restricInfo}}.svg"
+                                     data-index="{{$index}}" ng-class="{'active':$index==0}" class="show-tips"
+                                     ng-mousedown="showData(item,$event,$index)">
+                            </div>
+                            <!--增加交限的按钮-->
+                            <div class="inline"><span style="float:right;font-size: 20px;position:absolute;right:0px;top: 20px;cursor: pointer" class="glyphicon glyphicon-plus" ng-click="showAddOrEditDirectTpl('add')"></span></div>
+                        </li>
+                        <li>
+                            <label class="control-label">进入</label>
+                            <div><input type="text" ng-model="rdRestrictCurrentData.inLinkPid" class="chosen-disabled" readonly/></div>
+                        </li>
+                        <li>
+                            <label class="control-label">退出</label>
+                            <div><input type="text" ng-model="rdRestrictionCurrentDetail.outLinkPid"  class="chosen-disabled" readonly/></div>
+                        </li>
+                        <li>
+                            <label class="control-label">交限标志</label>
+                            <div class="radio inline" style="text-align: left">
+                                <label>
+                                    <input type="radio" disabled name="theoryOrActual" value=0 ng-model="rdRestrictionCurrentDetail.flag" >
+                                    未验证
+                                </label>
+                                <label>
+                                    <input type="radio" disabled name="theoryOrActual" value=1 ng-model="rdRestrictionCurrentDetail.flag" >
+                                    实地
+                                </label>
+                                <label>
+                                    <input type="radio" disabled name="theoryOrActual" value=2 ng-model="rdRestrictionCurrentDetail.flag" >
+                                    理论
                                 </label>
                             </div>
-                        </div>
-                        <div class="line line-dashed b-b line-lg pull-in"></div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">限重</label>
-
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control rounded" placeholder="0"
-                                       ng-model="data.resWeigh">
+                        </li>
+                        <li>
+                            <label class="control-label">关系类型</label>
+                            <div class="radio inline" style="text-align: left">
+                                <label>
+                                    <input type="radio" name="crossingOrLine" value=1
+                                           ng-model="rdRestrictionCurrentDetail.relationshipType">
+                                    路口
+                                </label>
+                                <label>
+                                    <input type="radio" name="crossingOrLine" value=2
+                                           ng-model="rdRestrictionCurrentDetail.relationshipType">
+                                    线线
+                                </label>
                             </div>
-                        </div>
-                        <div class="line line-dashed b-b line-lg pull-in"></div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">轴重</label>
+                        </li>
+                        <li>
+                            <label class="control-label">限制类型</label>
+                            <div class="radio inline">
+                                <label ng-click="changeLimitType(0);">
+                                    <input type="radio" name="researchOrLimited" value=0
+                                           ng-model="rdRestrictionCurrentDetail.type">
+                                    未调查
 
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control rounded" placeholder="0"
-                                       ng-model="data.resAxleLoad">
-                            </div>
-                        </div>
-                        <div class="line line-dashed b-b line-lg pull-in"></div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">轴数</label>
+                                </label>
+                                <label ng-click="changeLimitType(1);">
+                                    <input type="radio" name="researchOrLimited" value=1
+                                           ng-model="rdRestrictionCurrentDetail.type">
+                                    禁入驶入
 
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control rounded" placeholder="0"
-                                       ng-model="data.resAxleCount">
+                                </label>
+                                <label ng-click="changeLimitType(2);">
+                                    <input type="radio" name="researchOrLimited" value=2
+                                           ng-model="rdRestrictionCurrentDetail.type" title="时间段禁止" >
+                                    时间段禁止
+                                </label>
                             </div>
-                        </div>
-                    </form>
+                        </li>
+                        <li class="list-group-item" style="padding:7px;"
+                            ng-if="rdRestrictionCurrentDetail.type=='2'">
+                            <div ng-include="dateURL" class="muti-date" data-type="1" date-str='{{rdRestrictionCurrentDetail["conditions"][0]["timeDomain"]}}' style="width:100%;padding: 5px;"></div>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="panel panel-default">
-                <div class="panel-heading font-bold">
-                    时间段
-                  <span class="glyphicon glyphicon-plus"
-                        style="float: right;color: darkgray;font-size: 20px"
-                        ng-click="addTruckTime()"></span>
+            <!--显示经过线部分-->
+            <div class="fm-panel">
+                <div class="title" ng-click="selectFirstNum();">
+                    经过线:{{rdRestrictOriginalData.details[flag].vias.length}}条
                 </div>
-                <div class="panel-body">
-                    <form class="form-horizontal" method="get">
-                        <div ng-repeat="item in data.time">
-                            <div class="form-group">
-                                <label class="col-sm-2 control-label">限时</label>
-
-                                <div class="input-group m-b col-sm-10">
-                                    <div class="row">
-                                        <div class="col-sm-5">
-                                            <input class="form-control" type="text" ng-model="item.startTime">
-                                        </div>
-                                        <div class="col-sm-5">
-                                            <input class="form-control" type="text" ng-model="item.endTime">
-                                        </div>
-                                        <div class="col-sm-2">
-                                                      <span
-                                                              class="glyphicon glyphicon-remove-sign"
-                                                              style="color:darkgray;font-size: 20px"
-                                                              ng-click="minusTruckTime($index)"></span>
-                                        </div>
-                                    </div>
-
-
-                                </div>
+                <div class="content">
+                    <ul class="fm-ul fm-ul-form">
+                        <li ng-repeat="item in rdRestrictOriginalData.details[flag].vias">
+                            <label class="control-label">经过线{{$index+1}}</label>
+                            <div>
+                                <input type="text" class="chosen-disabled" ng-model="item.linkPid" disabled="disabled" />
                             </div>
-                            <div class="line line-dashed b-b line-lg pull-in"></div>
-                        </div>
-                    </form>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="fm-panel">
+                <div class="title" ng-click="selectFirstNum();">
+                    限制信息
+                        <span title="修改经过线" style="font-size: 14px;float: right;cursor: pointer" ng-if="editStatus && rdRestrictOriginalData.details[flag].vias.length" ng-click="modifyThroughLink()" class="glyphicon glyphicon-edit"></span>
+                </div>
+                <div class="content">
+                    <ul class="fm-ul fm-ul-form">
+                        <li>
+                            <label class="control-label">本外埠</label>
+                            <div>
+                                <label>
+                                    <input type="radio" name="theoryOrActual" value=0 ng-model="rdRestrictionCurrentDetail.flag" >
+                                    不应用
+                                </label>
+                                <label>
+                                    <input type="radio" name="theoryOrActual" value=1 ng-model="rdRestrictionCurrentDetail.flag" >
+                                    限外埠
+                                </label>
+                                <label>
+                                    <input type="radio" name="theoryOrActual" value=2 ng-model="rdRestrictionCurrentDetail.flag" >
+                                    限本埠
+                                </label>
+                            </div>
+                        </li>
+                        <li>
+                            <label class="control-label">拖挂车</label>
+                            <div>
+                                <label>
+                                    <input type="radio" name="theoryOrActual" value=0 >
+                                    不限
+                                </label>
+                                <label>
+                                    <input type="radio" name="theoryOrActual" value=1 >
+                                    限拖挂
+                                </label>
+                                </label>
+                            </div>
+                        </li>
+                        <li>
+                            <label class="control-label">限重</label>
+                            <div>
+                                <input type="text" ng-model="rdRestrictCurrentData.inLinkPid" />
+                            </div>
+                        </li>
+                        <li>
+                            <label class="control-label">限轴重</label>
+                            <div>
+                                <input type="text" ng-model="rdRestrictCurrentData.inLinkPid" />
+                            </div>
+                        </li>
+                        <li>
+                            <label class="control-label">限轴数</label>
+                            <div>
+                                <input type="text" ng-model="rdRestrictCurrentData" />
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </form>
-    </div>
-    <!-- 模态框（Modal） -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-         aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close"
-                            data-dismiss="modal" aria-hidden="true">
-                        &times;
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel">
-                        增加交限
-                    </h4>
-                </div>
-                <div class="modal-body">
-                    <div><img src="../../../css/limit/5.png" ng-click="selectTip('5')"></div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default"
-                            data-dismiss="modal">关闭
-                    </button>
-                    <button type="button" class="btn btn-primary" ng-click="addTips()">
-                        增加
-                    </button>
-                </div>
-            </div>
-            <!-- /.modal-content -->
-        </div>
-        <!-- /.modal -->
     </div>
 </div>
