节点分离服务其他4各要素

--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -21,7 +21,7 @@
                     </div>
                     <div class="col-md-9">
                         <button class="fm-top-btn blank eng" title="制作POI" ng-controller="addPoiCtrl" ng-click="addPoi('IXPOI')">POI</button>
-                        <button class="fm-top-btn blank" title="制作行政区划代表点" ng-controller="addShapeCtrl" ng-click="addShape('ADADMIN')">代</button>
+                        <button class="fm-top-btn blank" title="制作行政区划代表点" ng-controller="addAdminPointCtrl" ng-click="addAdmin('ADADMIN')">代</button>
                     </div>
                 </div>
             </li>
