--- a/scripts/components/road/tpls/toolBar_cru_tpl/addRestrictionTepl/addRdrestrictionTpl.html
+++ b/scripts/components/road/tpls/toolBar_cru_tpl/addRestrictionTepl/addRdrestrictionTpl.html
@@ -79,7 +79,7 @@
         </li>
         <li class="list-group-item">
             <div class="inline" ng-repeat="item in directData.showNormalData">
-                <div>
+                <div ng-if="restrictionType===0">
                     <span style="float: right;font-size: 12px;top: 0px;margin-top: -5px;
                                  margin-left:-5px;color: #fff;cursor: pointer;"
                           class="glyphicon glyphicon-remove-sign"
@@ -90,17 +90,16 @@
                     <img  ng-if="item.flag===true" ng-src="../../../images/road/1302/1302_2_{{item.id}}.svg"
                           data-index="{{$index}}" ng-class="{'active':$index==0}" class="show-tips" style="width: 30px;margin-left: 10px;"
                         >
-                   <!-- <img class="show-img-normal"
-                         ng-if="item.type===0"
-                         ng-src="../../images/road/1301/1301_0_{{item.flag}}.svg"
-                         ng-click="addTransitData(item,$index)"
-                         title="{{item.flag}}">
-                    <img class="show-img-normal" ng-if="item.type===2"
-                         ng-click="addTransitData(item,$index)"
-                         ng-src="../../images/road/1301/1301_2_{{item.flag}}.svg"
-                         title="{{item.flag}}">-->
                 </div>
-
+                <div ng-if="restrictionType===1">
+                    <span style="float: right;font-size: 12px;top: 0px;margin-top: -5px;
+                                 margin-left:-5px;color: #fff;cursor: pointer;"
+                          class="glyphicon glyphicon-remove-sign"
+                          ng-click="minusNormalData(item,$index,$event)" ></span>
+                    <img ng-src="../../../images/road/1302/1302_0_{{item.id}}.svg"
+                         class="show-tips" data-index="{{$index}}" ng-class="{'active':$index==0}" style="width: 30px;margin-left: 10px;"
+                    >
+                </div>
             </div>
 
         </li>
