--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -189,6 +189,23 @@
 </div>
 <div class="fm-top-btn split"></div>
 <div class="fm-top-btn-group">
+    <div class="dropdown" style="display:inline-block;vertical-align:top;">
+        <button type="button" class="btn fm-top-btn dropdown dropdown-toggle" data-toggle="dropdown"></button>
+        <ul class="dropdown-menu dropdown-menu-right" style="width:260px;">
+            <li>
+                <div class="row" style="margin:0px;padding:0px;">
+                    <div class="col-md-3" style="text-align:center;">
+                        框 选
+                    </div>
+                    <div class="col-md-9">
+                        <button class="fm-top-btn blank" title="框选RdNode" ng-controller="complexSelectCtrl" ng-click="selectShape('RDNODE')">点</button>
+                        <button class="fm-top-btn blank" title="框选RdLink" ng-controller="complexSelectCtrl" ng-click="selectShape('RDLINK')">线</button>
+                        <button class="fm-top-btn blank" title="框选Tips" ng-controller="complexSelectCtrl" ng-click="selectShape('TIPS')">tips</button>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
     <button class="fm-top-btn blank" title="执行检查" ng-click="openAdvancedToolsPanel('check')">检
         <div class="fm-top-btn loading" ng-if="checkRunning"></div>
     </button>
