--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -200,7 +200,7 @@
                     <div class="col-md-9">
                         <button class="fm-top-btn blank" title="框选RdNode" ng-controller="complexSelectCtrl" ng-click="selectShape('RDNODE')">点</button>
                         <button class="fm-top-btn blank" title="框选RdLink" ng-controller="complexSelectCtrl" ng-click="selectShape('RDLINK')">线</button>
-                        <button class="fm-top-btn blank" title="框选Tips" ng-controller="complexSelectCtrl" ng-click="selectShape('TIPS')">tips</button>
+                        <!-- <button class="fm-top-btn blank" title="框选Tips" ng-controller="complexSelectCtrl" ng-click="selectShape('TIPS')">tips</button> -->
                     </div>
                 </div>
             </li>
