--- a/scripts/components/road/tpls/attr_zone_tpl/zoneLinkTpl.html
+++ b/scripts/components/road/tpls/attr_zone_tpl/zoneLinkTpl.html
@@ -28,7 +28,7 @@
                             <label>比例尺</label>
                             <div>
                                 <select ng-model="zoneLinkData.scale"
-                                        ng-options="value.id as value.label for value in scale" disabled="disabled">
+                                        ng-options="value.id as value.label for value in scale">
                                 </select>
                             </div>
                         </li>
